chore: Update collect(Collectors.toList()) to toList() method